--- a/Absa.API/appsettings.json
+++ b/Absa.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source='Absa.db'"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
