Angular Front End Created That successfully displays from DB

--- a/Absa-SPA/angular.json
+++ b/Absa-SPA/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Absa-Contacts": {
+    "Absa-SPA": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Absa-Contacts",
+            "outputPath": "dist/Absa-SPA",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -50,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Absa-Contacts:build"
+            "browserTarget": "Absa-SPA:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Absa-Contacts:build:production"
+              "browserTarget": "Absa-SPA:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Absa-Contacts:build"
+            "browserTarget": "Absa-SPA:build"
           }
         },
         "test": {
@@ -95,7 +95,7 @@
         }
       }
     },
-    "Absa-Contacts-e2e": {
+    "Absa-SPA-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,11 +103,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Absa-Contacts:serve"
+            "devServerTarget": "Absa-SPA:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Absa-Contacts:serve:production"
+              "devServerTarget": "Absa-SPA:serve:production"
             }
           }
         },
@@ -123,5 +123,5 @@
       }
     }
   },
-  "defaultProject": "Absa-Contacts"
+  "defaultProject": "Absa-SPA"
 }
