--- a/Absa-SPA/package.json
+++ b/Absa-SPA/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "absa-contacts",
+  "name": "absa-spa",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "font-awesome": "^4.7.0",
+    "rxjs": "6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
