--- a/Phonebook-SPA/package.json
+++ b/Phonebook-SPA/package.json
@@ -20,10 +20,15 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "adm-zip": "^0.4.14",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "kind-of": "^6.0.3",
+    "minimist": "^1.2.5",
+    "parsejson": "0.0.3",
     "rxjs": "6.3.3",
+    "serialize-javascript": "^3.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
